--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
+
+  "scripts":{
+    "start": "node app.js"
+  },
+
   "dependencies": {
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
@@ -26,6 +31,6 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "app.js",
-  "start": "node app.js"
+  "main": "app.js"
+  // "start": "node app.js"
 }
