--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "npm": ">= 1.0.0"
   },
 
-  "scripts":{
-    "start": "node app.js"
-  },
-
   "dependencies": {
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
@@ -31,6 +27,8 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "app.js"
-  // "start": "node app.js"
+  "main": "app.js",
+    "scripts":{
+    "start": "node app.js"
+  }
 }
